--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,11 @@
 		    <version>0.8.8</version>
  		</dependency>
 
-        
+        <dependency>
+    		<groupId>edu.stanford.nlp</groupId>
+    		<artifactId>stanford-corenlp</artifactId>
+    		<version>3.6.0</version>
+		</dependency>
     </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
