--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,20 @@
    		 <version>3.6.0</version>
 	</dependency>
         
+        <dependency>
+    		<groupId>edu.emory.clir</groupId>
+    		<artifactId>clearnlp</artifactId>
+    		<version>3.2.0</version>
+		</dependency>
+		
+		<dependency>
+	    <groupId>edu.emory.clir</groupId>
+	    <artifactId>clearnlp-dictionary</artifactId>
+	    <version>3.2</version>
+		</dependency>
+		
+        
+        
     </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
