--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,11 @@
 		</dependency>
         
          -->
-       
+       <dependency>
+			<groupId>org.maltparser</groupId>
+			<artifactId>maltparser</artifactId>
+			<version>1.9.0</version>
+		</dependency>
 		
         
         
