--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
 			<artifactId>maltparser</artifactId>
 			<version>1.9.0</version>
 		</dependency>
-		 
+		 <dependency>
+   		 <groupId>org.apache.commons</groupId>
+    		<artifactId>commons-math3</artifactId>
+    		<version>3.2</version>
+		</dependency>
         
         
     </dependencies>
