The current chunking and pos tagging implementation by neural CRFs

--- a/config/chunkneural.config
+++ b/config/chunkneural.config
@@ -1,7 +1,7 @@
 serverAddress 172.18.240.32
 serverPort 9546
-wordEmbedding glove
-embeddingSize 50
+wordEmbedding glove none
+embeddingSize 50 5
 numLayer 1
 hiddenSize 300
 activation tanh
