The current chunking code

--- a/config/chunkneural.config
+++ b/config/chunkneural.config
@@ -3,8 +3,8 @@ serverPort 9546
 wordEmbedding glove none
 embeddingSize 50 5
 numLayer 1
-hiddenSize 300
-activation hardtanh
+hiddenSize 100
+activation tanh
 dropout 0
 optimizer none
 learningRate 0.01
