debugging the mean-field approach

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
 		    <artifactId>msgpack-core</artifactId>
 		    <version>0.8.8</version>
  		</dependency>
+ 		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
 
         
        <dependency>
