add more complex neural features to dependency parsing task

--- a/config/dep.config
+++ b/config/dep.config
@@ -1,10 +1,10 @@
 serverAddress 172.18.240.46
 serverPort 9546
-wordEmbedding glove
-embeddingSize 50
+wordEmbedding glove none
+embeddingSize 50 50
 numLayer 1
-hiddenSize 100
-activation tanh
-dropout 0
-optimizer none
+hiddenSize 200
+activation relu
+dropout 0.5
+optimizer adagrad
 learningRate 0.01
