update the latest neural network package from statnlp

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>org.statnlp</groupId>
+			<artifactId>statnlp-neural</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+        </dependency>
         
        <dependency>
 			<groupId>org.maltparser</groupId>
@@ -48,4 +53,13 @@
       </plugin>
     </plugins>
   </build>
+  
+   <distributionManagement>
+    	<snapshotRepository>
+        	<id>snapshots</id>
+        	<name>statnlp0-snapshots</name>
+        	<url>http://172.18.240.32:8081/artifactory/libs-snapshot-local</url>
+    	</snapshotRepository>
+	</distributionManagement>
+	
 </project>
