--- a/config/fcrfneural.config
+++ b/config/fcrfneural.config
@@ -1,10 +1,9 @@
-serverAddress 172.18.240.32
-serverPort 9546
 wordEmbedding glove
 embeddingSize 50
 numLayer 1
-hiddenSize 200
+hiddenSize 100
 activation tanh
 dropout 0
-optimizer adagrad
+optimizer none
 learningRate 0.01
+embeddingPath F:/phd/data/glove.6B/glove.6B.50d.txt
