Working on the neural extension

--- a/config/fcrfneural.config
+++ b/config/fcrfneural.config
@@ -1,7 +1,7 @@
-wordEmbedding glove
-embeddingSize 50
+wordEmbedding glove random
+embeddingSize 50 5
 numLayer 1
-hiddenSize 100
+hiddenSize 200
 activation tanh
 dropout 0
 optimizer none
