hardtanh to obtain better results

--- a/config/chunkneural.config
+++ b/config/chunkneural.config
@@ -1,10 +1,9 @@
-serverAddress 172.18.240.32
-serverPort 9546
-wordEmbedding glove none
+wordEmbedding glove random
 embeddingSize 50 5
 numLayer 1
 hiddenSize 100
-activation tanh
+activation hardtanh
 dropout 0
 optimizer none
 learningRate 0.01
+embeddingPath /Users/allanjie/data/embeddings/glove.6B.50d.txt
