--- a/config/dep.config
+++ b/config/dep.config
@@ -1,10 +1,10 @@
-serverAddress 172.18.240.46
+serverAddress 172.18.240.110
 serverPort 9546
-wordEmbedding glove none
-embeddingSize 50 50
+wordEmbedding glove
+embeddingSize 50
 numLayer 1
 hiddenSize 200
-activation relu
-dropout 0.5
-optimizer adagrad
+activation tanh
+dropout 0
+optimizer none
 learningRate 0.01
