Make an option to evaluate the result per iteratiions

--- a/config/dep.config
+++ b/config/dep.config
@@ -5,7 +5,7 @@ embeddingSize 50
 numLayer 1
 hiddenSize 100
 activation tanh
-dropout 0
-optimizer none
-learningRate 0.01
+optimizer adadelta
+learningRate 0.001
+dropout 0.5
 fixEmbedding
