neural FCRF in neural dep

--- a/config/fcrfneural.config
+++ b/config/fcrfneural.config
@@ -1,10 +1,11 @@
-serverAddress 172.18.240.32
-serverPort 9546
+serverAddress 172.18.240.110
+serverPort 9555
 wordEmbedding glove
 embeddingSize 50
 numLayer 1
-hiddenSize 200
-activation tanh
+hiddenSize 100
+activation hardtanh
 dropout 0
-optimizer adagrad
+optimizer none
 learningRate 0.01
+fixEmbedding
