just the neural network features

--- a/config/dep.config
+++ b/config/dep.config
@@ -1,11 +1,10 @@
 serverAddress 172.18.240.110
 serverPort 9555
-wordEmbedding glove
-embeddingSize 50
+wordEmbedding glove none glove none none
+embeddingSize 50 50 50 50 50
 numLayer 1
 hiddenSize 100
 activation tanh
 optimizer adadelta
-learningRate 0.001
+learningRate 0.01
 dropout 0.5
-fixEmbedding
