change a bit the dependency

--- a/config/dep.config
+++ b/config/dep.config
@@ -1,10 +1,11 @@
 serverAddress 172.18.240.110
 serverPort 9555
-wordEmbedding glove none glove none none
-embeddingSize 50 50 50 50 50
+wordEmbedding glove
+embeddingSize 50
 numLayer 1
-hiddenSize 100
-activation tanh
-optimizer adadelta
+hiddenSize 50
+activation identity
+optimizer none
 learningRate 0.01
-dropout 0.5
+dropout 0
+fixEmbedding
