finalized factorial crf

--- a/config/fcrfneural.config
+++ b/config/fcrfneural.config
@@ -3,8 +3,8 @@ serverPort 9555
 wordEmbedding glove
 embeddingSize 50
 numLayer 1
-hiddenSize 100
-activation hardtanh
+hiddenSize 50
+activation identity
 dropout 0
 optimizer none
 learningRate 0.01
