correct the features in exact model

--- a/config/fcrfneural.config
+++ b/config/fcrfneural.config
@@ -4,8 +4,7 @@ wordEmbedding glove
 embeddingSize 50
 numLayer 1
 hiddenSize 50
-activation identity
+activation tanh
 dropout 0
 optimizer none
 learningRate 0.01
-fixEmbedding
